# scrapalot

./: .env.example  .gitignore  README.md  docker-compose.yml
chat/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  _typos.toml  alembic.ini  cleanup-manual.sh  environment.yml  example.env  kill_process.ps1  pre_commit_lint.py  pyproject.toml  requirements-gpu.txt  requirements-igpu.txt  requirements.txt  run_service.py  scrapalot-monitor.py
chat/.github/: osv-scanner-config.toml  pr_fix_prompt.md  pr_review_prompt.md
chat/.github/workflows/: README.md  autofix-manual-trigger.yml  deploy-backend.yml  deploy-infrastructure.yml  pr-comment-fixes.yml  pr-review-automation.yml  security-audit.yml  type-check.yml
chat/alembic/: README.md  create_migration.py  db_utils.py  env.py  migration_template.py.mako
chat/alembic/utils/: schema_utils.py
chat/alembic/versions/: 001_initial_schema.py  002_ai_providers.py  003_subscriptions_billing.py  004_connectors_notes.py  005_rag_vectors.py  006_indexes.py  007_seed_data.py  008_combined_fixes.py  009_add_context_expansion_support.py  010_add_deep_research_tables.py  011_schema_updates.py  012_settings_updates.py  013_add_stripe_webhook_events_table.py  014_add_reading_positions_table.py  015_add_epub_cfi_field.py  016_increase_file_type_max_length.py  017_add_missing_columns.py  018_add_user_token_usage_table.py  019_add_missing_core_columns.py  020_fix_langchain_embedding_id_column.py  021_drop_legacy_user_tables_and_fk_constraints.py  022_remove_kotlin_owned_tables.py  023_rebuild_task_progress_table.py  024_add_rag_evaluation_traces_table.py  025_add_content_hash_column.py  026_add_content_store_deduplication.py  027_add_processing_stats_to_documents.py  028_add_graph_traversal_stats_to_rag_traces.py  029_recreate_reading_positions_table.py  030_add_collection_description_to_collection_workspace_map.py  031_add_llm_traces_table.py  032_add_file_stored_to_documents.py  033_add_embedding_to_document_summaries.py  034_add_document_summary_translations.py  035_add_unique_constraint_on_documents_collection_id_filename.py  036_add_graph_sync_status_table.py  037_fix_jobs_id_column_type_to_uuid.py  038_llm_traces_session_id_nullable.py  039_add_document_collections_junction_table.py  040_add_document_tags.py  (+47 more)
chat/configs/: config-new-users.yaml  config.yaml  logging.conf  prompts.yaml  secrets.yaml.example  strategy_exemplars.yaml
chat/data/models/spacy/: .gitignore  README.md
chat/docker-scrapalot/: .dockerignore  Dockerfile  Dockerfile.workers  docker-compose.gpu-workers.yml  docker-compose.gpu.yaml  docker-compose.yaml  entrypoint.sh  example.env  init-db.sh  init-test-api-key.sh  manage.sh  supervisord.conf
chat/scripts/: README_DATASET_GENERATOR.md  check_progress.py  dataset_generator.py  ingest_library.py  push_library_covers.py  supervisord_watchdog_beat.py
chat/scripts/anna/: _metadata_sources.py  annas_archive_book_processor.py  annas_archive_downloader.py  multi_source_metadata_extractor.py
chat/scripts/backfill/: backfill_publication_year.py  backfill_summary_embeddings.py  backfill_ufo.py  reset_alchemy.py
chat/scripts/competitive_analysis/: search_arxiv.sh
chat/scripts/covers/: _scrapalot_api.py  download_openlibrary_covers.py  upload_calibre_covers.py
chat/scripts/dataset_generator/: __init__.py  cli.py  delete_duplicates.py  pipeline.py  scrapalot_db_writer.py  scrapalot_uploader.py
chat/scripts/dataset_generator/core/: cli.py  config.py  models.py  state.py
chat/scripts/dataset_generator/extract/: __init__.py  chapters.py  scanner.py  text.py
chat/scripts/dataset_generator/generate/: claude.py  qa.py
chat/scripts/dataset_generator/output/: dedup.py  writer.py
chat/scripts/dataset_generator/runtime/: book_processor.py  dry_run.py  parallel.py  topic_focus.py
chat/scripts/dataset_generator/targets/: base.py  postgres.py  rest.py
chat/scripts/dev/: build-embedded-ui.sh  generate_grpc_stubs.py
chat/scripts/ingest/: batch_ingest.py
chat/scripts/manual_tests/: test_celery_ingest.py  test_grpc_chat.py
chat/scripts/ops/: scrapalot-backup.sh
chat/scripts/training/: qwen_moe_training.ipynb
chat/src/main/: app_instance.py  main.py
chat/src/main/background/: __init__.py  db_utils.py  job_service.py  progress_tracker.py  rate_limiter.py
chat/src/main/config/: background_workers.py  database.py  redis_embedded.py
chat/src/main/connectors/: __init__.py  connector_runner.py  exceptions.py  factory.py  interfaces.py  models.py
chat/src/main/constants/: __init__.py  error_codes.py  providers.py  status_codes.py
chat/src/main/dto/: __init__.py  (+17 more)
chat/tests/: README_TESTING.md  conftest.py  pytest.ini
chat/tests/books/: create_test_books.py  upload_test_books.py
chat/tests/db/: .gitignore
chat/tests/integration/: __init__.py  chat_client.py  setup_test_data.py  test_academic_contact.py  test_annotation_color_filter.py  test_auth.py  test_chunk_position.py  test_collections.py  test_community_detection.py  test_connectors_factory.py  test_cross_book_rag.py  test_crossref_external_books.py  test_document_processing_validation.py  test_document_quality.py  test_documents.py  test_entity_extraction_concurrent.py  test_image_generation_cost.py  test_mcp_integrations.py  test_memify_service.py  test_messages.py  test_multimodal_pipeline.py  test_neo4j_graph.py  test_notes.py  test_notes_citation_e2e.py  test_notes_citation_lookup.py  test_rag_entity_expanded.py  test_register_markdown.py  test_sessions.py  test_settings.py  test_structured_output_router.py  test_users.py  test_verify_claim_grade.py  test_voice_conversation.py  test_workspaces.py
chat/tests/rag_eval/: graph_utility_eval_set.jsonl
chat/tests/scripts/: __init__.py  bench_reranker.py  bench_reranker_ab.py  create_test_api_key.py  cross_book_compare_prototype.py  delete_pending_documents.py  monitor_recent_uploads.py  reset_pending_jobs.py  verify_agentic_provocation.py  verify_all_techniques.py  verify_one_session_all_techniques.py  verify_techniques_via_api.py
(+1448 files in other folders)
